<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <Button
        android:id="@+id/opDiv"
        style="@style/calcBtnAppearance"

        android:layout_width="wrap_content"
        
        android:layout_weight="1"
        android:text="@string/opDiv"/>

    <Button
        android:id="@+id/opMul"
        style="@style/calcBtnAppearance"

        android:layout_width="wrap_content"
        
        android:layout_weight="1"
        android:text="@string/opMul"/>

    <Button
        android:id="@+id/opSub"
        style="@style/calcBtnAppearance"

        android:layout_width="wrap_content"
        
        android:layout_weight="1"
        android:text="@string/opSub"/>

    <Button
        android:id="@+id/opAdd"
        style="@style/calcBtnAppearance"

        android:layout_width="wrap_content"
        
        android:layout_weight="1"
        android:text="@string/opAdd"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/enter"
        style="@style/calcBtnAppearance"

        android:layout_width="wrap_content"
        
        android:layout_weight="1"
        android:text="@string/enter"
        android:textStyle="bold"
        android:backgroundTint="@color/colorEnterBtn"
        android:textColor="#fff"/>
</LinearLayout>